// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiFormControlLayoutCustomIcon is rendered as button 1`] = `
<button
  class="wuiFormControlLayoutCustomIcon customClass wuiFormControlLayoutCustomIcon--clickable"
  data-test-subj="customIcon"
  type="button"
>
  <div
    aria-hidden="true"
    class="wuiFormControlLayoutCustomIcon__icon"
    data-wuiicon-type="alert"
  />
</button>
`;

exports[`WuiFormControlLayoutCustomIcon is rendered as span 1`] = `
<span
  class="wuiFormControlLayoutCustomIcon customClass"
  data-test-subj="customIcon"
>
  <div
    aria-hidden="true"
    class="wuiFormControlLayoutCustomIcon__icon"
    data-wuiicon-type="alert"
  />
</span>
`;
